# RL-HVAC

RLHVAC/: .gitignore  README.md  app.py  host_ui.py  pyproject.toml
RLHVAC/docs/setup/: citylearn.md
RLHVAC/docs/superpowers/plans/: 2026-06-13-rlhvac-phase0-skeleton.md  2026-06-13-rlhvac-phase1-citylearn.md  2026-06-13-rlhvac-viz-plan1-run-model-scene.md  2026-06-13-rlhvac-viz-plan2-plotly-tabs.md  2026-06-14-rlhvac-viz-plan3-citylearn-scene.md
RLHVAC/docs/superpowers/specs/: 2026-06-13-rlhvac-simulator-ui-design.md  2026-06-13-rlhvac-visualization-metrics-design.md
RLHVAC/envs/: environment-citylearn.yml  environment-ui.yml  setup-citylearn.ps1
RLHVAC/rlhvac/: __init__.py  launcher.py  run_store.py  runner.py  spec.py
RLHVAC/rlhvac/adapters/: __init__.py  base.py  citylearn.py  mock.py
RLHVAC/rlhvac/ui/: live_view.py  manifest_view.py  scene_access.py  viz_plotly.py
RLHVAC/rlhvac/ui/tabs/: live_tab.py  metrics_tab.py  run_tab.py
RLHVAC/tests/: test_base.py  test_citylearn_adapter.py  test_citylearn_e2e.py  test_e2e_pipe.py  test_launcher.py  test_live_tab.py  test_live_view.py  test_manifest_view.py  test_metrics_tab.py  test_mock_adapter.py  test_run_store.py  test_runner.py  test_scene_access.py  test_spec.py  test_viz_plotly.py
